<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c)  Aleksey Plekhanov 03.02.2023, 3:14
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/offerActivityLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_repeat">

    <TextView
        android:id="@+id/offerInfoTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"
        android:textColor="@color/water_green_dark"
        android:textStyle="bold"
        android:text="@string/offerInfo" />

    <TextView
        android:id="@+id/offerInfoFromTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/water_green_dark"
        android:textStyle="bold"
        android:text="@string/fromOfferInfoText" />

    <TextView
        android:id="@+id/offerInfoFromId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/water_green_dark"
        android:text="" />

    <TextView
        android:id="@+id/offerInfoToTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/water_green_dark"
        android:textStyle="bold"
        android:text="@string/toOfferInfoText" />

    <TextView
        android:id="@+id/offerInfoToId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/water_green_dark"
        android:text="" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/offerInfoCounterTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/lifetimeCountDownTimer"
            android:textColor="@color/water_green_dark"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/offerCounterTimeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/offerInfoCounterTextId"
            android:textColor="@color/water_green_dark"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/offerDoneButtonId"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/sand_dark"
        android:text="@string/offerDoneButton"
        android:textColor="@color/sand_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/bannerId"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>