<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c)  Aleksey Plekhanov 03.02.2023, 3:14
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/offerCommentFragmentLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_repeat">

    <EditText
        android:id="@+id/commentEditTextId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hintForCommentEditText"
        android:inputType="textMultiLine"
        android:maxLength="180"
        android:maxLines="9"
        android:scrollbars="vertical"
        android:textColor="@color/water_green_dark"
        android:textSize="14sp"
        android:importantForAutofill="no" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButtonId"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/sand_dark"
            android:includeFontPadding="false"
            android:text="@string/backCommentButton"
            android:textColor="@color/sand_light"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/applyCommentButtonId"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@id/backButtonId"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/water_green_dark"
            android:includeFontPadding="false"
            android:text="@string/addCommentToOfferButton"
            android:textColor="@color/sand_dark"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>