<!--
  ~ Copyright (c)  Aleksey Plekhanov 03.02.2023, 3:14
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/offerFromTextDriverOfferListItemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/water_green_dark"
            android:textStyle="bold"
            android:text="@string/fromOfferInfoText" />

        <TextView
            android:id="@+id/offerFromDriverOfferListItemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_toEndOf="@id/offerFromTextDriverOfferListItemId"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/water_green_dark"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/offerToTextDriverOfferListItemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/water_green_dark"
            android:textStyle="bold"
            android:text="@string/toOfferInfoText" />

        <TextView
            android:id="@+id/offerToDriverOfferListItemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_toEndOf="@id/offerToTextDriverOfferListItemId"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/water_green_dark"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/offerCommentTextDriverOfferListItemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/water_green_dark"
            android:textStyle="bold"
            android:text="@string/commentText" />

        <TextView
            android:id="@+id/commentDriverOfferListItemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_toEndOf="@id/offerCommentTextDriverOfferListItemId"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/water_green_dark"
            android:text="" />
    </RelativeLayout>

</LinearLayout>